Fix overflow issue caused by header error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,7 @@ header {
     position: relative;
     height: 30vh;
     min-height: 30vh;
+    overflow: hidden;
 }
 
 h1 {
